# realme

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Justfile  Makefile.toml  README.md  TODO.md  USAGE.md  cliff.toml  integration.yml  revise.toml  rustfmt.toml  typos.toml
.github/: dependabot.yml  mergify.yml
.github/workflows/: coverage.yml  integration.yml  release-plz.yml
benches/: simple_bench.rs
examples/: setting.toml
examples/access/: main.rs
examples/cmd_source/: main.rs
examples/convert/: main.rs
examples/custom_format/: main.rs
examples/custom_format/pem/: public.pem
examples/deserialize_anytype/: main.rs
examples/deserilize/: main.rs
examples/get_and_set/: main.rs
examples/global/: main.rs
examples/hierarchical_profile/: main.rs
examples/hierarchical_profile/config/: default.toml  dev.toml  prod.toml  test.toml
examples/hot_reload/: main.rs
examples/macros/: config-dev.toml  config-prod.toml  main.rs
examples/macros/config/: config.json  config.yaml  private.pem
examples/placeholder/: config.toml  main.rs
examples/priority/: main.rs
examples/priority/config/: p1.toml  p2.toml  p3.toml
examples/reload/: config.toml  main.rs  reload.toml
examples/replace_env/: main.rs
examples/simple/: main.rs
examples/tracing/: main.rs
examples/validator/: main.rs
examples/watch/: main.rs  watch.toml
realme_macros/: Cargo.toml  README.md
realme_macros/src/: adaptor.rs  lib.rs
realme_macros/src/adaptor/: file.rs
src/: adaptor.rs  config.rs  error.rs  errors.rs  lib.rs  map.rs  parser.rs  prelude.rs  realm.rs  realme.rs  util.rs  utils.rs  value.rs
src/adaptor/: format.rs  mod.rs  parser.rs  source.rs
src/adaptor/format/: cmd.rs  env.rs  ini.rs  json.rs  json5.rs  ron.rs  toml.rs  yaml.rs
src/adaptor/parser/: cmd.rs  env.rs  ini.rs  json.rs  json5.rs  ron.rs  ser.rs  toml.rs  yaml.rs
src/adaptor/source/: cmd.rs  env.rs  file.rs  ser.rs  string.rs
src/config/: builder.rs
src/realm/: builder.rs  cache.rs
src/realme/: api.rs  builder.rs  cache.rs  shared.rs
src/utils/: map.rs  minijinja.rs  tera.rs  wrap.rs
src/value/: access.rs  cast.rs  des.rs  expr.rs  get.rs  key.rs  merge.rs  mod.rs  ser.rs  set.rs
src/value/access/: expr.rs  get.rs  key.rs  set.rs
tests/: cmd_test.rs  hot_reload_test.rs  ini_test.rs  json5_test.rs  json_test.rs  macros_test.rs  magic_test.rs  ron_test.rs  toml_test.rs  watch_test.rs  yaml_test.rs
tests/source/: test.ini  test.json  test.json5  test.ron  test.toml  test.yaml
