[package]
name = "realme"
version = "0.1.11"
edition = "2021"
authors = ["Jasper Zhang <hanjie.zhang1228@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"
exclude = [".github", "Makefile.toml", "CHANGELOG.md"]
repository = "https://github.com/vainjoker/realme"
homepage = "https://github.com/vainjoker/realme"
description = "A flexible and extensible configuration management library for Rust, designed to simplify the process of loading and managing configuration settings from various sources."

[features]
default = ["full"]
full = [
  "cmd",
  "env",
  "toml",
  "json",
  "yaml",
  "json5",
  "ron",
  "ini",
  "tracing",
  "watch",
  "placeholder",
]
env = []
placeholder = ["dep:tera"]
cmd = ["dep:clap", "dep:nom"]
toml = ["dep:toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml2"]
json5 = ["dep:serde_json5"]
ron = ["dep:ron"]
ini = ["dep:rust-ini"]
tracing = ["dep:tracing"]
watch = ["dep:notify", "dep:crossbeam"]

[dependencies]
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
itertools = { version = "0.13.0" }
tera = { version = "1.19.0", default-features = false, optional = true }
toml = { version = "0.8.19", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml2 = { version = "0.1.2", optional = true }
ron = { version = "0.8.1", optional = true }
rust-ini = { version = "0.21.0", optional = true }
serde_json5 = { version = "0.1.0", optional = true }
clap = { version = "4.5.17", features = ["derive"], optional = true }
nom = { version = "7.1.3", optional = true }
tracing = { version = "0.1.40", optional = true }
notify = { version = "6.1.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }

[dev-dependencies]
anyhow = "1.0"
pretty_assertions = {"version" = "1.4"}
criterion = { version = "0.5", features = ["html_reports"] }

chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.15"
tempfile = "3.13.0"
toml = { version = "0.8.19" }
serde_json = { version = "1.0" }

[[bench]]
name = "simple_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
module_inception = "allow"
unwrap_used = "warn"
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
needless_raw_strings = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
use_self = "warn"

[profile.release]
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
allow-dirty = ["ci", "msi"]
cargo-dist-version = "0.22.1"
ci = ["github"]
installers = ["shell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "upload"
install-updater = false
install-path = "CARGO_HOME"
