[package]
name = "realme_macros"
version = "0.2.2"
edition = "2021"
authors = ["Jasper Zhang <hanjie.zhang1228@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [".github", "Makefile.toml", "CHANGELOG.md"]
repository = "https://github.com/vainjoker/realme"
homepage = "https://github.com/vainjoker/realme"
description = "A flexible and extensible configuration management library for Rust, designed to simplify the process of loading and managing configuration settings from various sources."

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "2.0.90", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"